  . Fixed bug #73337 (try/catch not working with two exceptions inside a same
    operation). (Dmitry)
  . Implemented FR #72768 (Add ENABLE_VIRTUAL_TERMINAL_PROCESSING flag for
    php.exe). (Michele Locati)
  . Implemented "Convert numeric keys in object/array casts" RFC, fixes
    bugs #53838, #61655, #66173, #70925, #72254, etc. (Andrea)
  . Raised minimum supported Windows versions to Windows 7/Server 2008 R2.
    (Anatol)
  . Implemented minor optimization in array_keys/array_values(). (Sara)
  . Fixed bug #73969 (segfault in debug_print_backtrace). (andrewnester)
  . Added PHP_OS_FAMILY constant to determine on which OS we are. (Jan Altensen)
  . Fixed bug #73994 (arginfo incorrect for unpack). (krakjoe)
  . Fixed bug #73973 (assertion error in debug_zval_dump). (andrewnester)
  . Fixed bug #73987 (Method compatibility check looks to original 
    definition and not parent). (pmmaga)
  . Fixed bug #73991 (JSON_OBJECT_AS_ARRAY not respected). (Sara)
  . Fixed bug #74053 (Corrupted class entries on shutdown when a destructor
    spawns another object). (jim at commercebyte dot com)
  . Fixed bug #73971 (Filename got limited to MAX_PATH on Win32 when scan
    directory). (Anatol)
  . Fixed bug #74149 (static embed SAPI linkage error). (krakjoe)

- BCMath:
  . Fixed bug #46564 (bcmod truncates fractionals). (liborm85)

- Calendar:
  . Fix integer overflows (Joshua Rogers)

- Date:
  . Fixed bug #69587 (DateInterval properties and isset). (jhdxr)

- DOM:
  . Fixed bug #67474 (getElementsByTagNameNS filter on default ns). (aboks)
  . Fixed bug #54382 (getAttributeNodeNS doesn't get xmlns* attributes).
    (aboks)
  . Fixed bug #74004 (LIBXML_NOWARNING (etc) ignored by DOMDocument::loadHTML).
    (somedaysummer)

- EXIF:
  . Added support for vendor specific tags for the following formats:
    Samsung, DJI, Panasonic, Sony, Pentax, Minolta & Sigma/Foveon. (Kalle)
  . Fixed bug #72682 (exif_read_data() fails to read all data for some
    images). (Kalle)