@@ -7,6 +7,6 @@ define("ZEND_THREAD_safe", 123);
 var_dump(ZEND_THREAD_safe);
 ?>
 --EXPECTF--
-Notice: Use of undefined constant ZEND_THREAD_safe - assumed 'ZEND_THREAD_safe' in %s on line %d
+Warning: Use of undefined constant ZEND_THREAD_safe - assumed 'ZEND_THREAD_safe' (this will throw an Error in a future version of PHP) in %s on line %d
 string(16) "ZEND_THREAD_safe"
 int(123)
