@@ -13,13 +13,13 @@ opcache.optimization_level=0xFFFFBFFF
 ?>
 okey
 --EXPECTF--
-Notice: Use of undefined constant E - assumed 'E' in %sbug71843.php on line %d
+Warning: Use of undefined constant E - assumed 'E' (this will throw an Error in a future version of PHP) in %sbug71843.php on line %d
 
 Warning: A non-numeric value encountered in %s on line %d
 
-Notice: Use of undefined constant R - assumed 'R' in %sbug71843.php on line %d
+Warning: Use of undefined constant R - assumed 'R' (this will throw an Error in a future version of PHP) in %sbug71843.php on line %d
 
 Warning: A non-numeric value encountered in %s on line %d
 
-Notice: Use of undefined constant See - assumed 'See' in %sbug71843.php on line %d
+Warning: Use of undefined constant See - assumed 'See' (this will throw an Error in a future version of PHP) in %sbug71843.php on line %d
 okey
